# athena

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tasktree.yaml
.github/workflows/: build-and-test.yml  release.yml
src/athena/: README.md  __init__.py  bm25_searcher.py  cache.py  cli.py  config.py  docstring_updater.py  entity_path.py  hashing.py  info.py  locate.py  mcp_server.py  models.py  module_docstring_updater.py  package_utils.py  search.py  sync.py  tokenizer.py
src/athena/parsers/: __init__.py  base.py  python_parser.py
tests/: test_athena.py  test_bm25_searcher.py  test_cache.py  test_cache_error_handling.py  test_cli.py  test_config.py  test_entity_path.py  test_hashing.py  test_info.py  test_mcp_server.py  test_models.py  test_module_docstring_updater.py  test_search.py  test_status.py  test_status_e2e.py  test_sync.py  test_sync_recursive.py  test_tokenizer.py
tests/integration/: test_locate_e2e.py  test_package_sync_e2e.py  test_search_e2e.py  test_sync_e2e.py  test_sync_integration.py
tests/parsers/: __init__.py  test_base.py  test_init.py  test_python_parser.py
