[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "athena"
version = "0.0.1"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "mcp>=1.0.0",
]

[project.scripts]
ack = "athena.cli:app"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "tasktree"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
